// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full article with style 1`] = `
.c17 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c17:after {
  content: "";
  clear: both;
  display: table;
}

.c20 {
  padding-left: 10px;
}

.c16 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c21 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c22 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c19 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c18 {
  display: block;
}

.c1 {
  display: block;
}

.c0 {
  display: none;
}

.c15 {
  display: block;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c14 {
  position: relative;
  padding: 0 10px;
}

.c12 {
  background-color: #FFFFFF;
  height: 55px;
  margin: 30px 0;
}

.c3 {
  border-radius: 50%;
  height: 100px;
  overflow: hidden;
  width: 100px;
}

.c10 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 15px;
}

.c5 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c2 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  display: none;
}

.c11 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

@media (min-width:768px) {
  .c17 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c17 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c20 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c16 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c16 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c21 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c21 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c22 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c22 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c18 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c18 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

@media (min-width:768px) {
  .c14 {
    width: 80.8%;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c14 {
    width: 56.2%;
  }
}

@media (max-width:1320px) {
  .c12 {
    position: -webkit-sticky;
    position: sticky;
    left: 0;
    top: 0;
    z-index: 999;
  }

  .c12.sticky {
    width: 100% !important;
    box-shadow: 0 2px 8px 0 rgba(0,0,0,0.3);
  }

  .c12:not(.sticky) .c13:before,
  .c12:not(.sticky) .c13:after {
    content: "";
    height: 1px;
    background-color: #DBDBDB;
    position: absolute;
    left: 10px;
    right: 10px;
  }

  .c12:not(.sticky) .c13:before {
    top: 0;
  }

  .c12:not(.sticky) .c13:after {
    bottom: 0;
  }
}

@media (min-width:1321px) {
  .c12 .c13:before,
  .c12 .c13:after {
    content: "";
    height: 1px;
    background-color: #DBDBDB;
    position: absolute;
    left: 10px;
    right: 10px;
  }

  .c12 .c13:before {
    top: 0;
  }

  .c12 .c13:after {
    bottom: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    height: 118px;
    width: 118px;
  }
}

@media (min-width:768px) {
  .c10 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c5 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c8 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c7 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c9 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c6 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c6 {
    margin-bottom: 20px;
  }
}

@media (min-width:768px) {
  .c11 {
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c11 {
    width: 56.2%;
    margin-left: auto;
    margin-right: auto;
  }
}

<style>
.S1 {
  margin-bottom: 25px;
}

.S2 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S3 {
  margin-bottom: 10px;
}

.S4 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S5 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S6 {
  line-height: 15px;
  margin-top: 15px;
}

.S7 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  margin-bottom: 25px;
  padding-top: 35px;
}

.S8 {
  margin-bottom: 20px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS3 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS4 {
  margin: 0;
}

.IS5 {
  height: 100%;
  width: 100%;
}

.IS6 {
  position: relative;
}

.IS7 {
  height: 100%;
  width: 100%;
}

.IS8 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS9 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS10 {
  margin: 0;
}

.IS11 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
}
</style>

<article>
  <Helmet>
    <title>
      Some Headline
       | 
      
      The Times
    </title>
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
  </Helmet>
  <div
    className="c0 responsiveweb__HeaderAdContainer-sc-1exejum-1 c0 css-view-1dbjc4n"
  >
    <Ad
      className="IS1"
    />
  </div>
  <div
    className="c1 responsiveweb__MainContainer-sc-1exejum-0 c1 css-view-1dbjc4n"
  >
    <div
      className="c2 responsiveweb__HeaderContainer-sc-1epfk4y-3 c2 css-view-1dbjc4n r-alignItems-1awozwy r-marginBottom-eektet r-marginLeft-1n0xq6e r-marginRight-zso239 r-paddingTop-elmauq S7"
    >
      <div
        className="c3 responsiveweb__AuthorImageContainer-sc-1epfk4y-0 c3 css-view-1dbjc4n r-marginBottom-eektet S1"
      >
        <Image />
      </div>
      <div
        className="css-view-1dbjc4n r-marginBottom-15d164r S3"
      >
        <div
          className="css-text-76zvg2 r-color-1yqk5fa r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-3b040n r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv S2"
        >
          SOME LABEL
        </div>
      </div>
      <h1
        className="c4 css-reset-4rbku5 responsiveweb__HeadlineContainer-sc-1epfk4y-4 c4 css-text-76zvg2 r-color-1yqk5fa r-fontFamily-iirzy8 r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j S4"
      >
        Some Headline
      </h1>
      <div
        className="c5 responsiveweb__FlagsContainer-sc-1epfk4y-2 c5 css-view-1dbjc4n"
      >
        <ArticleFlags />
      </div>
      <h2
        className="c6 css-reset-4rbku5 responsiveweb__StandfirstContainer-sc-1epfk4y-9 c6 css-text-76zvg2 r-color-1khnkhu r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j S5"
      >
        Some Standfirst
      </h2>
      <div
        className="c7 responsiveweb__MetaContainer-sc-1epfk4y-7 c7 css-view-1dbjc4n"
      >
        <div
          className="c8 responsiveweb__Meta-sc-1epfk4y-6 c8 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
        >
          <ArticleBylineWithLinks />
        </div>
        <div
          className="c9 responsiveweb__Separator-sc-1epfk4y-8 c9 css-view-1dbjc4n"
        />
        <div
          className="c8 responsiveweb__Meta-sc-1epfk4y-6 c8 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
        >
          <div
            className="c10 responsiveweb__DatePublicationContainer-sc-1epfk4y-1 c10 css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-19h5ruw S6"
          >
            <DatePublication />
          </div>
        </div>
      </div>
    </div>
    <div
      className="c11 responsiveweb__LeadAsset-sc-1epfk4y-10 c11 css-view-1dbjc4n r-marginBottom-117bsoe S8"
    >
      <figure
        className="IS4"
      >
        <div
          className="css-view-1dbjc4n IS3"
        >
          <div
            className="css-view-1dbjc4n IS2"
          >
            <Image />
          </div>
        </div>
        <figcaption>
          <CenteredCaption />
        </figcaption>
      </figure>
    </div>
    <div
      className="c12"
    >
      <div
        className="c13 c14"
      >
        <SaveAndShareBar />
      </div>
    </div>
    <div
      className="c15 responsiveweb__BodyContainer-sc-1exejum-2 c15 css-view-1dbjc4n"
    >
      <div>
        <div
          className="c16 responsiveweb__PrimaryImg-sc-16nqyj8-5 c16 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <Link>
        Some Link
      </Link>
      <p
        className="c17"
      >
        Some content
      </p>
      <div
        className="c18 responsiveweb__PullQuoteContainer-sc-16nqyj8-9 c18 css-view-1dbjc4n"
      >
        <div
          className="c19 responsiveweb__PullQuoteResp-sc-16nqyj8-8 c19 css-view-1dbjc4n"
        >
          <PullQuote>
            The pull quote content
          </PullQuote>
        </div>
      </div>
      <div
        className="c16 responsiveweb__PrimaryImg-sc-16nqyj8-5 c16 css-view-1dbjc4n"
      >
        <figure
          className="IS10"
        >
          <div
            className="css-view-1dbjc4n IS9"
          >
            <div
              className="css-view-1dbjc4n IS8"
            >
              <div
                className="IS7"
              >
                <div
                  className="IS6"
                >
                  <video
                    className="video-js IS5"
                  />
                </div>
              </div>
            </div>
          </div>
          <figcaption>
            <div
              className="c20 inset-captionweb__InsetCaptionStyle-sc-8m7lci-0 c20 css-view-1dbjc4n"
            >
              <Caption />
            </div>
          </figcaption>
        </figure>
      </div>
      <Ad
        className="IS11"
      />
      <div>
        <div
          className="c21 responsiveweb__SecondaryImg-sc-16nqyj8-6 c21 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <div>
        <div
          className="c22 responsiveweb__InlineImg-sc-16nqyj8-7 c22 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <ArticleExtras />
    </div>
  </div>
</article>
`;

exports[`full article with style in the culture magazine 1`] = `
.c17 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c17:after {
  content: "";
  clear: both;
  display: table;
}

.c20 {
  padding-left: 10px;
}

.c16 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c21 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c22 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c19 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c18 {
  display: block;
}

.c1 {
  display: block;
}

.c0 {
  display: none;
}

.c15 {
  display: block;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c14 {
  position: relative;
  padding: 0 10px;
}

.c12 {
  background-color: #FFFFFF;
  height: 55px;
  margin: 30px 0;
}

.c3 {
  border-radius: 50%;
  height: 100px;
  overflow: hidden;
  width: 100px;
}

.c10 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 15px;
}

.c5 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c2 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  display: none;
}

.c11 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

@media (min-width:768px) {
  .c17 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c17 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c20 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c16 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c16 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c21 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c21 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c22 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c22 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c18 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c18 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

@media (min-width:768px) {
  .c14 {
    width: 80.8%;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c14 {
    width: 56.2%;
  }
}

@media (max-width:1320px) {
  .c12 {
    position: -webkit-sticky;
    position: sticky;
    left: 0;
    top: 0;
    z-index: 999;
  }

  .c12.sticky {
    width: 100% !important;
    box-shadow: 0 2px 8px 0 rgba(0,0,0,0.3);
  }

  .c12:not(.sticky) .c13:before,
  .c12:not(.sticky) .c13:after {
    content: "";
    height: 1px;
    background-color: #DBDBDB;
    position: absolute;
    left: 10px;
    right: 10px;
  }

  .c12:not(.sticky) .c13:before {
    top: 0;
  }

  .c12:not(.sticky) .c13:after {
    bottom: 0;
  }
}

@media (min-width:1321px) {
  .c12 .c13:before,
  .c12 .c13:after {
    content: "";
    height: 1px;
    background-color: #DBDBDB;
    position: absolute;
    left: 10px;
    right: 10px;
  }

  .c12 .c13:before {
    top: 0;
  }

  .c12 .c13:after {
    bottom: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    height: 118px;
    width: 118px;
  }
}

@media (min-width:768px) {
  .c10 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c5 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c8 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c7 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c9 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c6 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c6 {
    margin-bottom: 20px;
  }
}

@media (min-width:768px) {
  .c11 {
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c11 {
    width: 56.2%;
    margin-left: auto;
    margin-right: auto;
  }
}

<style>
.S1 {
  margin-bottom: 25px;
}

.S2 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S3 {
  margin-bottom: 10px;
}

.S4 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S5 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S6 {
  line-height: 15px;
  margin-top: 15px;
}

.S7 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  margin-bottom: 25px;
  padding-top: 35px;
}

.S8 {
  margin-bottom: 20px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(123,0,70,1.00);
}

.IS3 {
  font-family: Flama-Bold;
}

.IS4 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS5 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS6 {
  margin: 0;
}

.IS7 {
  height: 100%;
  width: 100%;
}

.IS8 {
  position: relative;
}

.IS9 {
  height: 100%;
  width: 100%;
}

.IS10 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS11 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS12 {
  margin: 0;
}

.IS13 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
}
</style>

<article>
  <Helmet>
    <title>
      Some Headline
       | 
      
      The Times
    </title>
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
  </Helmet>
  <div
    className="c0 responsiveweb__HeaderAdContainer-sc-1exejum-1 c0 css-view-1dbjc4n"
  >
    <Ad
      className="IS1"
    />
  </div>
  <div
    className="c1 responsiveweb__MainContainer-sc-1exejum-0 c1 css-view-1dbjc4n"
  >
    <div
      className="c2 responsiveweb__HeaderContainer-sc-1epfk4y-3 c2 css-view-1dbjc4n r-alignItems-1awozwy r-marginBottom-eektet r-marginLeft-1n0xq6e r-marginRight-zso239 r-paddingTop-elmauq S7"
    >
      <div
        className="c3 responsiveweb__AuthorImageContainer-sc-1epfk4y-0 c3 css-view-1dbjc4n r-marginBottom-eektet S1"
      >
        <Image />
      </div>
      <div
        className="css-view-1dbjc4n r-marginBottom-15d164r S3"
      >
        <div
          className="css-text-76zvg2 r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-3b040n r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S2"
        >
          SOME LABEL
        </div>
      </div>
      <h1
        className="c4 css-reset-4rbku5 responsiveweb__HeadlineContainer-sc-1epfk4y-4 c4 css-text-76zvg2 r-color-1yqk5fa r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S4"
      >
        Some Headline
      </h1>
      <div
        className="c5 responsiveweb__FlagsContainer-sc-1epfk4y-2 c5 css-view-1dbjc4n"
      >
        <ArticleFlags />
      </div>
      <h2
        className="c6 css-reset-4rbku5 responsiveweb__StandfirstContainer-sc-1epfk4y-9 c6 css-text-76zvg2 r-color-1khnkhu r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j S5"
      >
        Some Standfirst
      </h2>
      <div
        className="c7 responsiveweb__MetaContainer-sc-1epfk4y-7 c7 css-view-1dbjc4n"
      >
        <div
          className="c8 responsiveweb__Meta-sc-1epfk4y-6 c8 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
        >
          <ArticleBylineWithLinks />
        </div>
        <div
          className="c9 responsiveweb__Separator-sc-1epfk4y-8 c9 css-view-1dbjc4n"
        />
        <div
          className="c8 responsiveweb__Meta-sc-1epfk4y-6 c8 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
        >
          <div
            className="c10 responsiveweb__DatePublicationContainer-sc-1epfk4y-1 c10 css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-19h5ruw S6"
          >
            <DatePublication />
          </div>
        </div>
      </div>
    </div>
    <div
      className="c11 responsiveweb__LeadAsset-sc-1epfk4y-10 c11 css-view-1dbjc4n r-marginBottom-117bsoe S8"
    >
      <figure
        className="IS6"
      >
        <div
          className="css-view-1dbjc4n IS5"
        >
          <div
            className="css-view-1dbjc4n IS4"
          >
            <Image />
          </div>
        </div>
        <figcaption>
          <CenteredCaption />
        </figcaption>
      </figure>
    </div>
    <div
      className="c12"
    >
      <div
        className="c13 c14"
      >
        <SaveAndShareBar />
      </div>
    </div>
    <div
      className="c15 responsiveweb__BodyContainer-sc-1exejum-2 c15 css-view-1dbjc4n"
    >
      <div>
        <div
          className="c16 responsiveweb__PrimaryImg-sc-16nqyj8-5 c16 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <Link>
        Some Link
      </Link>
      <p
        className="c17"
      >
        Some content
      </p>
      <div
        className="c18 responsiveweb__PullQuoteContainer-sc-16nqyj8-9 c18 css-view-1dbjc4n"
      >
        <div
          className="c19 responsiveweb__PullQuoteResp-sc-16nqyj8-8 c19 css-view-1dbjc4n"
        >
          <PullQuote>
            The pull quote content
          </PullQuote>
        </div>
      </div>
      <div
        className="c16 responsiveweb__PrimaryImg-sc-16nqyj8-5 c16 css-view-1dbjc4n"
      >
        <figure
          className="IS12"
        >
          <div
            className="css-view-1dbjc4n IS11"
          >
            <div
              className="css-view-1dbjc4n IS10"
            >
              <div
                className="IS9"
              >
                <div
                  className="IS8"
                >
                  <video
                    className="video-js IS7"
                  />
                </div>
              </div>
            </div>
          </div>
          <figcaption>
            <div
              className="c20 inset-captionweb__InsetCaptionStyle-sc-8m7lci-0 c20 css-view-1dbjc4n"
            >
              <Caption />
            </div>
          </figcaption>
        </figure>
      </div>
      <Ad
        className="IS13"
      />
      <div>
        <div
          className="c21 responsiveweb__SecondaryImg-sc-16nqyj8-6 c21 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <div>
        <div
          className="c22 responsiveweb__InlineImg-sc-16nqyj8-7 c22 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <ArticleExtras />
    </div>
  </div>
</article>
`;

exports[`full article with style in the style magazine 1`] = `
.c17 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c17:after {
  content: "";
  clear: both;
  display: table;
}

.c20 {
  padding-left: 10px;
}

.c16 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c21 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c22 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c19 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c18 {
  display: block;
}

.c1 {
  display: block;
}

.c0 {
  display: none;
}

.c15 {
  display: block;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c14 {
  position: relative;
  padding: 0 10px;
}

.c12 {
  background-color: #FFFFFF;
  height: 55px;
  margin: 30px 0;
}

.c3 {
  border-radius: 50%;
  height: 100px;
  overflow: hidden;
  width: 100px;
}

.c10 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 15px;
}

.c5 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c2 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  display: none;
}

.c11 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

@media (min-width:768px) {
  .c17 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c17 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c20 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c16 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c16 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c21 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c21 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c22 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c22 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c18 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c18 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

@media (min-width:768px) {
  .c14 {
    width: 80.8%;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c14 {
    width: 56.2%;
  }
}

@media (max-width:1320px) {
  .c12 {
    position: -webkit-sticky;
    position: sticky;
    left: 0;
    top: 0;
    z-index: 999;
  }

  .c12.sticky {
    width: 100% !important;
    box-shadow: 0 2px 8px 0 rgba(0,0,0,0.3);
  }

  .c12:not(.sticky) .c13:before,
  .c12:not(.sticky) .c13:after {
    content: "";
    height: 1px;
    background-color: #DBDBDB;
    position: absolute;
    left: 10px;
    right: 10px;
  }

  .c12:not(.sticky) .c13:before {
    top: 0;
  }

  .c12:not(.sticky) .c13:after {
    bottom: 0;
  }
}

@media (min-width:1321px) {
  .c12 .c13:before,
  .c12 .c13:after {
    content: "";
    height: 1px;
    background-color: #DBDBDB;
    position: absolute;
    left: 10px;
    right: 10px;
  }

  .c12 .c13:before {
    top: 0;
  }

  .c12 .c13:after {
    bottom: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    height: 118px;
    width: 118px;
  }
}

@media (min-width:768px) {
  .c10 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c5 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c8 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c7 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c9 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c6 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c6 {
    margin-bottom: 20px;
  }
}

@media (min-width:768px) {
  .c11 {
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c11 {
    width: 56.2%;
    margin-left: auto;
    margin-right: auto;
  }
}

<style>
.S1 {
  margin-bottom: 25px;
}

.S2 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S3 {
  margin-bottom: 10px;
}

.S4 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S5 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S6 {
  line-height: 15px;
  margin-top: 15px;
}

.S7 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  margin-bottom: 25px;
  padding-top: 35px;
}

.S8 {
  margin-bottom: 20px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(188,51,133,1.00);
}

.IS3 {
  font-family: CenturyGothic-Bold;
}

.IS4 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS5 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS6 {
  margin: 0;
}

.IS7 {
  height: 100%;
  width: 100%;
}

.IS8 {
  position: relative;
}

.IS9 {
  height: 100%;
  width: 100%;
}

.IS10 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS11 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS12 {
  margin: 0;
}

.IS13 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
}
</style>

<article>
  <Helmet>
    <title>
      Some Headline
       | 
      
      The Times
    </title>
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
  </Helmet>
  <div
    className="c0 responsiveweb__HeaderAdContainer-sc-1exejum-1 c0 css-view-1dbjc4n"
  >
    <Ad
      className="IS1"
    />
  </div>
  <div
    className="c1 responsiveweb__MainContainer-sc-1exejum-0 c1 css-view-1dbjc4n"
  >
    <div
      className="c2 responsiveweb__HeaderContainer-sc-1epfk4y-3 c2 css-view-1dbjc4n r-alignItems-1awozwy r-marginBottom-eektet r-marginLeft-1n0xq6e r-marginRight-zso239 r-paddingTop-elmauq S7"
    >
      <div
        className="c3 responsiveweb__AuthorImageContainer-sc-1epfk4y-0 c3 css-view-1dbjc4n r-marginBottom-eektet S1"
      >
        <Image />
      </div>
      <div
        className="css-view-1dbjc4n r-marginBottom-15d164r S3"
      >
        <div
          className="css-text-76zvg2 r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-3b040n r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S2"
        >
          SOME LABEL
        </div>
      </div>
      <h1
        className="c4 css-reset-4rbku5 responsiveweb__HeadlineContainer-sc-1epfk4y-4 c4 css-text-76zvg2 r-color-1yqk5fa r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S4"
      >
        Some Headline
      </h1>
      <div
        className="c5 responsiveweb__FlagsContainer-sc-1epfk4y-2 c5 css-view-1dbjc4n"
      >
        <ArticleFlags />
      </div>
      <h2
        className="c6 css-reset-4rbku5 responsiveweb__StandfirstContainer-sc-1epfk4y-9 c6 css-text-76zvg2 r-color-1khnkhu r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j S5"
      >
        Some Standfirst
      </h2>
      <div
        className="c7 responsiveweb__MetaContainer-sc-1epfk4y-7 c7 css-view-1dbjc4n"
      >
        <div
          className="c8 responsiveweb__Meta-sc-1epfk4y-6 c8 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
        >
          <ArticleBylineWithLinks />
        </div>
        <div
          className="c9 responsiveweb__Separator-sc-1epfk4y-8 c9 css-view-1dbjc4n"
        />
        <div
          className="c8 responsiveweb__Meta-sc-1epfk4y-6 c8 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
        >
          <div
            className="c10 responsiveweb__DatePublicationContainer-sc-1epfk4y-1 c10 css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-19h5ruw S6"
          >
            <DatePublication />
          </div>
        </div>
      </div>
    </div>
    <div
      className="c11 responsiveweb__LeadAsset-sc-1epfk4y-10 c11 css-view-1dbjc4n r-marginBottom-117bsoe S8"
    >
      <figure
        className="IS6"
      >
        <div
          className="css-view-1dbjc4n IS5"
        >
          <div
            className="css-view-1dbjc4n IS4"
          >
            <Image />
          </div>
        </div>
        <figcaption>
          <CenteredCaption />
        </figcaption>
      </figure>
    </div>
    <div
      className="c12"
    >
      <div
        className="c13 c14"
      >
        <SaveAndShareBar />
      </div>
    </div>
    <div
      className="c15 responsiveweb__BodyContainer-sc-1exejum-2 c15 css-view-1dbjc4n"
    >
      <div>
        <div
          className="c16 responsiveweb__PrimaryImg-sc-16nqyj8-5 c16 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <Link>
        Some Link
      </Link>
      <p
        className="c17"
      >
        Some content
      </p>
      <div
        className="c18 responsiveweb__PullQuoteContainer-sc-16nqyj8-9 c18 css-view-1dbjc4n"
      >
        <div
          className="c19 responsiveweb__PullQuoteResp-sc-16nqyj8-8 c19 css-view-1dbjc4n"
        >
          <PullQuote>
            The pull quote content
          </PullQuote>
        </div>
      </div>
      <div
        className="c16 responsiveweb__PrimaryImg-sc-16nqyj8-5 c16 css-view-1dbjc4n"
      >
        <figure
          className="IS12"
        >
          <div
            className="css-view-1dbjc4n IS11"
          >
            <div
              className="css-view-1dbjc4n IS10"
            >
              <div
                className="IS9"
              >
                <div
                  className="IS8"
                >
                  <video
                    className="video-js IS7"
                  />
                </div>
              </div>
            </div>
          </div>
          <figcaption>
            <div
              className="c20 inset-captionweb__InsetCaptionStyle-sc-8m7lci-0 c20 css-view-1dbjc4n"
            >
              <Caption />
            </div>
          </figcaption>
        </figure>
      </div>
      <Ad
        className="IS13"
      />
      <div>
        <div
          className="c21 responsiveweb__SecondaryImg-sc-16nqyj8-6 c21 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <div>
        <div
          className="c22 responsiveweb__InlineImg-sc-16nqyj8-7 c22 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <ArticleExtras />
    </div>
  </div>
</article>
`;

exports[`full article with style in the sunday times magazine 1`] = `
.c17 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c17:after {
  content: "";
  clear: both;
  display: table;
}

.c20 {
  padding-left: 10px;
}

.c16 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c21 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c22 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c19 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c18 {
  display: block;
}

.c1 {
  display: block;
}

.c0 {
  display: none;
}

.c15 {
  display: block;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c14 {
  position: relative;
  padding: 0 10px;
}

.c12 {
  background-color: #FFFFFF;
  height: 55px;
  margin: 30px 0;
}

.c3 {
  border-radius: 50%;
  height: 100px;
  overflow: hidden;
  width: 100px;
}

.c10 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 15px;
}

.c5 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c2 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  display: none;
}

.c11 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

@media (min-width:768px) {
  .c17 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c17 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c20 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c16 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c16 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c21 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c21 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c22 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c22 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c18 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c18 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

@media (min-width:768px) {
  .c14 {
    width: 80.8%;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c14 {
    width: 56.2%;
  }
}

@media (max-width:1320px) {
  .c12 {
    position: -webkit-sticky;
    position: sticky;
    left: 0;
    top: 0;
    z-index: 999;
  }

  .c12.sticky {
    width: 100% !important;
    box-shadow: 0 2px 8px 0 rgba(0,0,0,0.3);
  }

  .c12:not(.sticky) .c13:before,
  .c12:not(.sticky) .c13:after {
    content: "";
    height: 1px;
    background-color: #DBDBDB;
    position: absolute;
    left: 10px;
    right: 10px;
  }

  .c12:not(.sticky) .c13:before {
    top: 0;
  }

  .c12:not(.sticky) .c13:after {
    bottom: 0;
  }
}

@media (min-width:1321px) {
  .c12 .c13:before,
  .c12 .c13:after {
    content: "";
    height: 1px;
    background-color: #DBDBDB;
    position: absolute;
    left: 10px;
    right: 10px;
  }

  .c12 .c13:before {
    top: 0;
  }

  .c12 .c13:after {
    bottom: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    height: 118px;
    width: 118px;
  }
}

@media (min-width:768px) {
  .c10 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c5 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c8 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c7 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c9 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c6 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c6 {
    margin-bottom: 20px;
  }
}

@media (min-width:768px) {
  .c11 {
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c11 {
    width: 56.2%;
    margin-left: auto;
    margin-right: auto;
  }
}

<style>
.S1 {
  margin-bottom: 25px;
}

.S2 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S3 {
  margin-bottom: 10px;
}

.S4 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S5 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S6 {
  line-height: 15px;
  margin-top: 15px;
}

.S7 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  margin-bottom: 25px;
  padding-top: 35px;
}

.S8 {
  margin-bottom: 20px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(241,61,0,1.00);
}

.IS3 {
  font-family: Tiempos-Headline-Bold;
}

.IS4 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS5 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS6 {
  margin: 0;
}

.IS7 {
  height: 100%;
  width: 100%;
}

.IS8 {
  position: relative;
}

.IS9 {
  height: 100%;
  width: 100%;
}

.IS10 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS11 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS12 {
  margin: 0;
}

.IS13 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
}
</style>

<article>
  <Helmet>
    <title>
      Some Headline
       | 
      
      The Times
    </title>
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
  </Helmet>
  <div
    className="c0 responsiveweb__HeaderAdContainer-sc-1exejum-1 c0 css-view-1dbjc4n"
  >
    <Ad
      className="IS1"
    />
  </div>
  <div
    className="c1 responsiveweb__MainContainer-sc-1exejum-0 c1 css-view-1dbjc4n"
  >
    <div
      className="c2 responsiveweb__HeaderContainer-sc-1epfk4y-3 c2 css-view-1dbjc4n r-alignItems-1awozwy r-marginBottom-eektet r-marginLeft-1n0xq6e r-marginRight-zso239 r-paddingTop-elmauq S7"
    >
      <div
        className="c3 responsiveweb__AuthorImageContainer-sc-1epfk4y-0 c3 css-view-1dbjc4n r-marginBottom-eektet S1"
      >
        <Image />
      </div>
      <div
        className="css-view-1dbjc4n r-marginBottom-15d164r S3"
      >
        <div
          className="css-text-76zvg2 r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-3b040n r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S2"
        >
          SOME LABEL
        </div>
      </div>
      <h1
        className="c4 css-reset-4rbku5 responsiveweb__HeadlineContainer-sc-1epfk4y-4 c4 css-text-76zvg2 r-color-1yqk5fa r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S4"
      >
        Some Headline
      </h1>
      <div
        className="c5 responsiveweb__FlagsContainer-sc-1epfk4y-2 c5 css-view-1dbjc4n"
      >
        <ArticleFlags />
      </div>
      <h2
        className="c6 css-reset-4rbku5 responsiveweb__StandfirstContainer-sc-1epfk4y-9 c6 css-text-76zvg2 r-color-1khnkhu r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j S5"
      >
        Some Standfirst
      </h2>
      <div
        className="c7 responsiveweb__MetaContainer-sc-1epfk4y-7 c7 css-view-1dbjc4n"
      >
        <div
          className="c8 responsiveweb__Meta-sc-1epfk4y-6 c8 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
        >
          <ArticleBylineWithLinks />
        </div>
        <div
          className="c9 responsiveweb__Separator-sc-1epfk4y-8 c9 css-view-1dbjc4n"
        />
        <div
          className="c8 responsiveweb__Meta-sc-1epfk4y-6 c8 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
        >
          <div
            className="c10 responsiveweb__DatePublicationContainer-sc-1epfk4y-1 c10 css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-19h5ruw S6"
          >
            <DatePublication />
          </div>
        </div>
      </div>
    </div>
    <div
      className="c11 responsiveweb__LeadAsset-sc-1epfk4y-10 c11 css-view-1dbjc4n r-marginBottom-117bsoe S8"
    >
      <figure
        className="IS6"
      >
        <div
          className="css-view-1dbjc4n IS5"
        >
          <div
            className="css-view-1dbjc4n IS4"
          >
            <Image />
          </div>
        </div>
        <figcaption>
          <CenteredCaption />
        </figcaption>
      </figure>
    </div>
    <div
      className="c12"
    >
      <div
        className="c13 c14"
      >
        <SaveAndShareBar />
      </div>
    </div>
    <div
      className="c15 responsiveweb__BodyContainer-sc-1exejum-2 c15 css-view-1dbjc4n"
    >
      <div>
        <div
          className="c16 responsiveweb__PrimaryImg-sc-16nqyj8-5 c16 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <Link>
        Some Link
      </Link>
      <p
        className="c17"
      >
        Some content
      </p>
      <div
        className="c18 responsiveweb__PullQuoteContainer-sc-16nqyj8-9 c18 css-view-1dbjc4n"
      >
        <div
          className="c19 responsiveweb__PullQuoteResp-sc-16nqyj8-8 c19 css-view-1dbjc4n"
        >
          <PullQuote>
            The pull quote content
          </PullQuote>
        </div>
      </div>
      <div
        className="c16 responsiveweb__PrimaryImg-sc-16nqyj8-5 c16 css-view-1dbjc4n"
      >
        <figure
          className="IS12"
        >
          <div
            className="css-view-1dbjc4n IS11"
          >
            <div
              className="css-view-1dbjc4n IS10"
            >
              <div
                className="IS9"
              >
                <div
                  className="IS8"
                >
                  <video
                    className="video-js IS7"
                  />
                </div>
              </div>
            </div>
          </div>
          <figcaption>
            <div
              className="c20 inset-captionweb__InsetCaptionStyle-sc-8m7lci-0 c20 css-view-1dbjc4n"
            >
              <Caption />
            </div>
          </figcaption>
        </figure>
      </div>
      <Ad
        className="IS13"
      />
      <div>
        <div
          className="c21 responsiveweb__SecondaryImg-sc-16nqyj8-6 c21 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <div>
        <div
          className="c22 responsiveweb__InlineImg-sc-16nqyj8-7 c22 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <ArticleExtras />
    </div>
  </div>
</article>
`;
